--- a/details.html
+++ b/details.html
@@ -180,7 +180,7 @@
   </footer>
 
   <!-- page script (external) -->
-  <script src="js/details-page.js"></script>
+  <script src="js/bardesign.js"></script>
 
   <script>
     // simple hamburger toggle (keeps behavior consistent with movies page)
