--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>NeonAnime Hub</title>
+  <title>Neon Streaming Aisa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- External CSS -->
@@ -21,7 +21,7 @@
     </div>
 
     <h1 class="site-title">
-      NEON<span>ANIME</span> HUB
+      𝐍𝒆𝒐𝒏<span>𝑨𝐧𝐢𝐦𝐞</span> 𝑨𝐬𝐢𝑨
     </h1>
   </header>
 
@@ -35,7 +35,7 @@
       <input
         id="searchInput"
         type="text"
-        placeholder="Search anime (movies & series)…"
+        placeholder="𝑆𝑒𝑎𝑟𝑐ℎ 𝑌𝑜𝑢𝑟 𝐹𝑖𝑙𝑚/𝑆𝑒𝑟𝑖𝑒𝑠 𝐻𝑒𝑟𝑒..."
         autocomplete="off"
         aria-label="Search anime (movies & series)"
         aria-controls="searchResultPanel"
@@ -68,14 +68,14 @@
   <!-- ===== SLIDE MENU ===== -->
   <aside class="side-menu" id="sideMenu" aria-hidden="true">
     <div class="menu-header">
-      <h2>Menu</h2>
+      <h2>𝗠𝗘𝗡𝗨</h2>
     </div>
 
     <ul class="menu-list">
-      <li data-category="home"><a href="index.html">🏠 Home</a></li>
-      <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
-      <li data-category="series"><a href="series.html">📺 Series</a></li>
-      <li data-category="genres"><a href="genres.html">🎭 Genres</a></li>
+      <li data-category="home"><a href="index.html">Home 🏠</a></li>
+      <li data-category="movies"><a href="movies.html">Movies 🎬</a></li>
+      <li data-category="series"><a href="series.html">Series 📺</a></li>
+      <li data-category="genres"><a href="genres.html">Genres 🗃️</a></li>
     </ul>
   </aside>
 
@@ -91,7 +91,7 @@
   <section class="content-section">
     <!-- add "strip gold" to mark golden strip header -->
     <div class="section-header strip gold">
-      <h2>Anime Movies</h2>
+      <h2>𝑨𝐧𝐢𝐦𝐞 𝐌𝐨𝐯𝐢𝐞𝐬...</h2>
     </div>
 
     <div class="horizontal-scroll" id="moviesContainer">
@@ -105,7 +105,7 @@
   <section class="content-section">
     <!-- add "strip lime" to mark lime strip header -->
     <div class="section-header strip lime">
-      <h2>Anime Series</h2>
+      <h2>𝑨𝐧𝐢𝐦𝐞 𝐒𝐞𝐫𝐢𝐞𝐬...</h2>
     </div>
 
     <div class="horizontal-scroll" id="seriesContainer">
@@ -118,7 +118,7 @@
   
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 NeonAnime Hub</p>
+    <p>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨. 𝒕𝒉𝒆 𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p>
   </footer>
 
   <!-- ===== JS ===== -->
