--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
   <!-- ===== SLIDE MENU ===== -->
   <aside class="side-menu" id="sideMenu" aria-hidden="true">
     <div class="menu-header">
-      <h2>𝗠𝗘𝗡𝗨</h2>
+      <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
-      <li data-category="home"><a href="index.html">Home 🏠</a></li>
-      <li data-category="movies"><a href="movies.html">Movies 🎬</a></li>
-      <li data-category="series"><a href="series.html">Series 📺</a></li>
-      <li data-category="genres"><a href="genres.html">Genres 🗃️</a></li>
+      <li data-category="home"><a href="index.html">🏠 Home</a></li>
+      <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
+      <li data-category="series"><a href="series.html">📺 Series</a></li>
+      <li data-category="genres"><a href="genres.html">🗃️ Genres</a></li>
     </ul>
   </aside>
 
