--- a/movies.html
+++ b/movies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NeonAnime Hub — Movies</title>
+  <title>Neon Streaming —Asian Movies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Main CSS -->
@@ -24,7 +24,7 @@
     </div>
 
     <h1 class="site-title" style="margin:0 auto;">
-      NEON<span>ANIME</span> HUB
+      𝐍𝒆𝒐𝒏<span>𝑨𝐧𝐢𝐦𝐞</span> 𝑨𝐬𝐢𝑨
     </h1>
 
   </header>
@@ -37,7 +37,7 @@
       <!-- keep .search-box for JS, add .search-bar so CSS applies -->
       <div class="search-box search-bar">
         <i class="material-icons">search</i>
-        <input type="text" placeholder="Search for anime..." />
+        <input type="text" placeholder="𝑆𝑒𝑎𝑟𝑐ℎ 𝑌𝑜𝑢𝑟 𝐹𝑖𝑙𝑚 𝐻𝑒𝑟𝑒..." />
       </div>
     </div>
 
@@ -65,7 +65,7 @@
   <aside class="side-menu" id="sideMenu">
 
     <div class="menu-header">
-      <h2>Menu</h2>
+      <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
@@ -83,7 +83,7 @@
     <section class="content-section">
 
       <div class="section-header">
-        <h2>Movies</h2>
+        <h2>𝐌𝐨𝐯𝐢𝐞𝐬</h2>
       </div>
 
       <div class="grid-container" id="movieGrid">
@@ -96,7 +96,8 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 NeonAnime Hub</p>
+    <p>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨
+    𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p>
   </footer>
 
   <!-- ===== JS ===== -->
