--- a/series.html
+++ b/series.html
@@ -24,7 +24,7 @@
     </div>
 
     <h1 class="site-title" style="margin:0 auto;">
-      NEON<span>ANIME</span> HUB
+      𝐍𝒆𝒐𝒏<span>𝑨𝐧𝐢𝐦𝐞</span> 𝑨𝐬𝐢𝑨
     </h1>
 
   </header>
@@ -67,7 +67,7 @@
   <aside class="side-menu" id="sideMenu">
 
     <div class="menu-header">
-      <h2>Menu</h2>
+      <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
@@ -85,7 +85,7 @@
     <section class="content-section">
 
       <div class="section-header">
-        <h2>Series</h2>
+        <h2>𝑨𝐧𝐢𝐦𝐞 𝐒𝐞𝐫𝐢𝐞𝐬</h2>
       </div>
 
       <!-- IMPORTANT: keep the same grid id ("movieGrid") so details.js can target it unchanged -->
@@ -99,7 +99,7 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 NeonAnime Hub</p>
+    <p>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨. 𝒕𝒉𝒆 𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p>
   </footer>
 
   <!-- ===== Fetch shim: intercept data/anime.json and return only SERIES =====
