--- a/movies.html
+++ b/movies.html
@@ -88,7 +88,8 @@
 
       <div class="grid-container" id="movieGrid">
         <!-- Cards injected via JS -->
-      </div><button class="load-more load-more-btn" id="loadMoreBtn">Load More Movies</button>
+      </div>
+      <button class="load-more-btn" id="loadMoreBtn">Load More Movies</button>
     </section>
 
   </main>
