--- a/series.html
+++ b/series.html
@@ -24,7 +24,7 @@
     </div>
 
     <h1 class="site-title" style="margin:0 auto;">
-      NEON<span>ANIME</span> HUB
+      𝐍𝒆𝒐𝒏<span>𝑨𝐧𝐢𝐦𝐞</span> 𝑨𝐬𝐢𝑨
     </h1>
 
   </header>
@@ -67,7 +67,7 @@
   <aside class="side-menu" id="sideMenu">
 
     <div class="menu-header">
-      <h2>Menu</h2>
+      <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
@@ -99,17 +99,8 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 NeonAnime Hub</p>
+    <p>>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨. 𝒕𝒉𝒆 𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p></p>
   </footer>
-
-  <!-- ===== Fetch shim: intercept data/anime.json and return only SERIES =====
-       This runs BEFORE details.js so the existing details.js can be used unchanged.
-       It:
-         - captures the original fetch
-         - when the request is for data/anime.json, extracts only items that look like series
-         - converts those series items to have type "Movie" so details.js (which filters for movie-like items)
-           will include them; other movie items are excluded
-  -->
 
 
   <!-- ===== JS (unchanged) ===== -->
