--- a/details.html
+++ b/details.html
@@ -166,7 +166,15 @@
       <h3 style="margin-top:0">Overview:</h3>
       <p id="overviewText">...</p>
     </section>
+<section class="similar-section">
+  <h3 class="similar-title">Similar Anime</h3>
 
+  <div id="similarRow" class="horizontal-scroll similar-row"></div>
+
+  <button id="similarLoadMore" class="load-more-btn">
+    Load More
+  </button>
+</section>
     <section id="socialSection" style="max-width:760px;margin:12px auto;text-align:center;display:none">
       <!-- social buttons injected here -->
     </section>
