--- a/genres.html
+++ b/genres.html
@@ -15,10 +15,15 @@
 <body>
 
 <header class="navbar">
-  <div class="menu-icon" id="menuBtn">
-    <span></span><span></span><span></span>
-  </div>
-  <h1 class="site-title">𝑮𝒆𝒏𝒓𝒆𝒔</h1>
+    <div class="menu-icon" id="menuBtn" aria-label="Open menu" role="button" tabindex="0">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <h1 class="site-title">
+      𝐍𝒆𝒐𝒏<span>𝑨𝐧𝐢𝐦𝐞</span> 𝑨𝐬𝐢𝑨
+    </h1>
 </header>
 
 <main class="genre-page">
