--- a/series.html
+++ b/series.html
@@ -37,7 +37,7 @@
       <!-- keep .search-box for JS, add .search-bar so CSS applies -->
       <div class="search-box search-bar">
         <i class="material-icons">search</i>
-        <input type="text" placeholder="Search for anime..." />
+        <input type="text" placeholder="𝑆𝑒𝑎𝑟𝑐ℎ 𝑌𝑜𝑢𝑟 𝑆𝑒𝑟𝑖𝑒𝑠 𝐻𝑒𝑟𝑒.../>
       </div>
     </div>
 
@@ -74,7 +74,7 @@
       <li><a href="index.html">🏠 Home</a></li>
       <li><a href="movies.html">🎬 Movies</a></li>
       <li><a href="series.html">📺 Series</a></li>
-      <li><a href="genres.html">🎭 Genres</a></li>
+      <li><a href="genres.html">🗃️ Genres</a></li>
     </ul>
 
   </aside>
@@ -85,7 +85,7 @@
     <section class="content-section">
 
       <div class="section-header">
-        <h2>Series</h2>
+        <h2>𝐒𝐞𝐫𝐢𝐞𝐬</h2>
       </div>
 
       <!-- IMPORTANT: keep the same grid id ("movieGrid") so details.js can target it unchanged -->
