--- a/series.html
+++ b/series.html
@@ -37,7 +37,7 @@
       <!-- keep .search-box for JS, add .search-bar so CSS applies -->
       <div class="search-box search-bar">
         <i class="material-icons">search</i>
-        <input type="text" placeholder="𝑆𝑒𝑎𝑟𝑐ℎ 𝑌𝑜𝑢𝑟 𝑆𝑒𝑟𝑖𝑒𝑠 𝐻𝑒𝑟𝑒.../>
+        <input type="text" placeholder="𝑆𝑒𝑎𝑟𝑐ℎ 𝑌𝑜𝑢𝑟 𝑆𝑒𝑟𝑖𝑒𝑠 𝐻𝑒𝑟𝑒..."/>
       </div>
     </div>
 
@@ -99,8 +99,7 @@
 
   <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨. 𝒕𝒉𝒆 𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p></p>
-  </footer>
+    <p>© 2026 𝐍𝒆𝒐𝒏 𝑨𝐧𝐢𝐦𝐞 𝑨𝐬𝐢𝑨. 𝒕𝒉𝒆 𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p>  </footer>
 
 
   <!-- ===== JS (unchanged) ===== -->
