--- a/movies.html
+++ b/movies.html
@@ -72,7 +72,7 @@
       <li><a href="index.html">🏠 Home</a></li>
       <li><a href="movies.html">🎬 Movies</a></li>
       <li><a href="series.html">📺 Series</a></li>
-      <li><a href="genres.html">🎭 Genres</a></li>
+      <li><a href="genres.html">🗃️ Genres</a></li>
     </ul>
 
   </aside>
@@ -102,7 +102,7 @@
 
   <!-- ===== JS ===== -->
   <script src="js/details.js"></script>
-<script src="js/bardesign.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
