--- a/series.html
+++ b/series.html
@@ -104,7 +104,7 @@
 
   <!-- ===== JS (unchanged) ===== -->
   <script src="js/details.js"></script>
-<script src="js/bardesign.js"></script>
+<script src="js/app.js"></script>
   <!-- accessibility mirror / small page tweaks (matches movies.html but adjusts labels) -->
   <script>
     // ensure search panel aria toggles for accessibility when JS shows results
