--- a/series.html
+++ b/series.html
@@ -64,19 +64,17 @@
 
   </section>
   <!-- ===== SLIDE MENU ===== -->
-  <aside class="side-menu" id="sideMenu">
-
+ <aside class="side-menu" id="sideMenu" aria-hidden="true">
     <div class="menu-header">
       <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="movies.html">🎬 Movies</a></li>
-      <li><a href="series.html">📺 Series</a></li>
-      <li><a href="genres.html">🗃️ Genres</a></li>
+      <li data-category="home"><a href="index.html">🏠 Home</a></li>
+      <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
+      <li data-category="series"><a href="series.html">📺 Series</a></li>
+      <li data-category="genres"><a href="genres.html">🗃️ Genres</a></li>
     </ul>
-
   </aside>
 
   <!-- ===== MAIN CONTENT ===== -->
