--- a/details.html
+++ b/details.html
@@ -132,13 +132,16 @@
   </header>
 
   <!-- side menu kept for parity with other pages -->
-  <aside class="side-menu" id="sideMenu" aria-hidden="true">
-    <div class="menu-header"><h2>Menu</h2></div>
+    <aside class="side-menu" id="sideMenu" aria-hidden="true">
+    <div class="menu-header">
+      <h2>--《𝗠𝗘𝗡𝗨》--</h2>
+    </div>
+
     <ul class="menu-list">
-      <li><a href="index.html">🏠 Home</a></li>
-      <li><a href="movies.html">🎬 Movies</a></li>
-      <li><a href="series.html">📺 Series</a></li>
-      <li><a href="genres.html">🎭 Genres</a></li>
+      <li data-category="home"><a href="index.html">🏠 Home</a></li>
+      <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
+      <li data-category="series"><a href="series.html">📺 Series</a></li>
+      <li data-category="genres"><a href="genres.html">🗃️ Genres</a></li>
     </ul>
   </aside>
 
