--- a/details.html
+++ b/details.html
@@ -184,7 +184,7 @@
 
   <!-- page script (external) -->
   <script src="js/details.js"></script>
-
+<script src="js/app.js"></script>
   <script>
     // simple hamburger toggle (keeps behavior consistent with movies page)
     (function(){
