--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <ul class="menu-list">
-      <li data-category="home"><a href="index.html">🏠 Home</a></li>
+      <li data-category="home"><a href="index.html"bbbb>🏠 Home</a></li>
       <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
       <li data-category="series"><a href="series.html">📺 Series</a></li>
       <li data-category="genres"><a href="genres.html">🗃️ Genres</a></li>
@@ -123,6 +123,5 @@
 
   <!-- ===== JS ===== -->
   <script src="js/app.js"></script>
-  <script src="js/bardesign.js"></script>
 </body>
 </html>
