--- a/movies.html
+++ b/movies.html
@@ -62,14 +62,14 @@
   </section>
 
   <!-- ===== SLIDE MENU ===== -->
- <aside class="side-menu" id="sideMenu" aria-hidden="true">
+  <aside class="side-menu" id="sideMenu" aria-hidden="true">
     <div class="menu-header">
       <h2>--《𝗠𝗘𝗡𝗨》--</h2>
     </div>
 
     <ul class="menu-list">
       <li data-category="home"><a href="index.html">🏠 Home</a></li>
-      <li data-category="movies"><a href="movies.html">🎬 Movies</a></li>
+      <li data-category="movies"><a href="movies.html"class="current">🎬 Movies</a></li>
       <li data-category="series"><a href="series.html">📺 Series</a></li>
       <li data-category="genres"><a href="genres.html">🗃️ Genres</a></li>
     </ul>
@@ -98,9 +98,7 @@
     𝒐𝒇𝒇𝒊𝒄𝒊𝒂𝒍 𝑨𝒔𝒊𝒂𝒏 𝑨𝒏𝒊𝒎𝒆 𝑺𝒕𝒓𝒆𝒂𝒎𝒊𝒏𝒈 𝑺𝒊𝒕𝒆.</p>
   </footer>
 
-  <!-- ===== JS ===== -->
-  <script src="js/details.js"></script>
+  <!-- ===== JS ===== -->  
 <script src="js/app.js"></script>
-l
 </body>
 </html>
